# PreEmploymentTestTasks

./: README.md
ColoredSquare/: CMakeLists.txt
ColoredSquare/ColoredSquare/: CMakeLists.txt  ColoredSquare.cpp  ColoredSquare.h  DefineConstants.h  main.cpp
